fix linters update layout

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="container">
-        <div class="main">
-            <p>Todays To Do</p>
+    <section class="wrapper">
+        <div class="head">
+            <p>Today's To Do</p>
             <i class="fa-solid fa-rotate rotate"></i>
         </div>
         <hr>
+        <div class="addData">
+            <input id="task" type="text" placeholder="Add to your List...." required>
+            <button type="button"> <i id="add-button" class="fa-solid fa-turn-down turnLeft"></i> </button>
+        </div>
+        <hr>
         <ul id="lists" class="lists">
-            <li>
-                <input type="text" placeholder="Add to your List....">
-                <i class="fa-solid fa-turn-down turnLeft"></i>
-            </li>
-            <hr>
+                
         </ul>
-        <button type="button">Clear all completed</button>
+        <button class="clear-btn" type="button">Clear all completed</button>
     </section>
 
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
