create branch, update file

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="wrapper">
+    <section class="card">
         <div class="head">
             <p>Today's To Do</p>
             <i class="fa-solid fa-rotate rotate"></i>
@@ -22,9 +22,11 @@
         <ul id="lists" class="lists">
                 
         </ul>
-        <button class="clear-btn" type="button">Clear all completed</button>
+        <button id="clearCompletedBtn" class="clear-btn" type="button">Clear all completed</button>
     </section>
 
     <script type="module" src="index.js"></script>
+    <script type="module" src="./modules/crud.js"></script>
+    <script type="module" src="./modules/tudo.js"></script>
 </body>
 </html>
